# GD32_FreeRTOS_templete

./: .gitignore  CMakeLists.txt  GD32_FreeRTOS_templete.code-workspace  README.md  gd32f3x0.ld
CMake/: create_bin.cmake  flash_by_install.cmake  gcc-arm-none-eabi.cmake
Project/Keil/: GD32_FreeRTOS_templete.uvprojx
Project/Keil/Objects/: GD32_FreeRTOS_templete.axf
Scripts/: Start_RTT.sh
Scripts/openocd/: cmsisdap_base.cfg
Source/: CMakeLists.txt
Source/BSP/: CMakeLists.txt
Source/BSP/inc/: bsp_log.h  bsp_systick.h  bsp_uart.h
Source/BSP/src/: bsp_log.c  bsp_systick.c  bsp_timebase.c  bsp_uart.c
Source/Config/: FreeRTOSConfig.h  SEGGER_RTT_Conf.h  gd32f3x0_libopt.h  printf_config.h
Source/Core/: CMakeLists.txt  freertos.c  gd32f3x0_it.c  gd32f3x0_it.h  main.c
Source/Drivers/: CMakeLists.txt
Source/Drivers/CMSIS/: CMakeLists.txt
Source/Drivers/CMSIS/GD/GD32F3x0/Include/: gd32f3x0.h
Source/Drivers/CMSIS/GD/GD32F3x0/Source/: system_gd32f3x0.c
Source/Drivers/CMSIS/GD/GD32F3x0/Source/GNU/: startup_gd32f3x0.s
Source/Drivers/GD32F3x0_standard_peripheral/: CMakeLists.txt
Source/Drivers/GD32F3x0_standard_peripheral/Source/: gd32f3x0_pmu.c
Source/Drivers/RTT/: CMakeLists.txt  SEGGER_RTT_Syscalls_GCC.c
Source/Middlewares/FreeRTOS/: CMakeLists.txt
Source/Middlewares/FreeRTOS/Source/: CMakeLists.txt
Source/Retarget/: CMakelists.txt
Source/Retarget/inc/: printf.h  scanf.h
Source/Retarget/src/: printf.c  scanf.c  syscalls.c
Utilities/: GD32F3x0_DFP.3.0.2.pack
